--- a/index.html
+++ b/index.html
@@ -15,7 +15,37 @@
 </head>
 
 <body>
-<div>test</div>
+  <!-- navbar -->
+  <section class='navbar'>
+    <!-- sidebar -->
+    <div class="menu-icon">
+      <div class="line line-1"></div>
+      <div class="line line-2"></div>
+      <div class="line line-3"></div>
+    </div>
+    <ul class="social-icon-list">
+      <li><a href=""  class="social-link"><i class="fab fa-facebook-f"></i></a></li>
+      <li><a href=""  class="social-link"><i class="fab fa-twitter"></i></a></li>
+      <li><a href=""  class="social-link"><i class="fab fa-google-plus-g"></i></a></li>
+      <li><a href=""  class="social-link"><i class="fab fa-instagram"></i></a></li>
+    </ul>
+    <div class="year">
+      <script>
+        document.write(new Date().getFullYear())
+      </script>
+    </div>
+    <!-- end of sidebar -->
+
+
+  </section>
+ 
+
+<!-- <p class="lead mb-0">
+  Copyright&copy;
+  <script>
+    document.write(new Date().getFullYear())
+  </script> Mahshid Mianchi
+</p> -->
 </body>
 
 </html>
