--- a/index.html
+++ b/index.html
@@ -16,28 +16,30 @@
 
 <body>
   <!-- navbar -->
-  <section class='navbar'>
+  <div class='navbar'>
     <!-- sidebar -->
-    <div class="menu-icon">
-      <div class="line line-1"></div>
-      <div class="line line-2"></div>
-      <div class="line line-3"></div>
-    </div>
-    <ul class="social-icon-list">
-      <li><a href=""  class="social-link"><i class="fab fa-facebook-f"></i></a></li>
-      <li><a href=""  class="social-link"><i class="fab fa-twitter"></i></a></li>
-      <li><a href=""  class="social-link"><i class="fab fa-google-plus-g"></i></a></li>
-      <li><a href=""  class="social-link"><i class="fab fa-instagram"></i></a></li>
-    </ul>
-    <div class="year">
-      <script>
-        document.write(new Date().getFullYear())
-      </script>
-    </div>
+    <div class="sidebar">
+      <div class="menu-icon">
+        <div class="line line-1"></div>
+        <div class="line line-2"></div>
+        <div class="line line-3"></div>
+      </div>
+      <ul class="social-icon-list">
+        <li><a href="" class="social-link"><i class="fab fa-facebook-f"></i></a></li>
+        <li><a href="" class="social-link"><i class="fab fa-twitter"></i></a></li>
+        <li><a href="" class="social-link"><i class="fab fa-google-plus-g"></i></a></li>
+        <li><a href="" class="social-link"><i class="fab fa-instagram"></i></a></li>
+      </ul>
+      <div class="year">
+        <script>
+          document.write(new Date().getFullYear())
+        </script>
+      </div>
+    </div>  
     <!-- end of sidebar -->
 
 
-  </section>
+  </div>
  
 
 <!-- <p class="lead mb-0">
