added navigation markup

--- a/index.html
+++ b/index.html
@@ -37,17 +37,46 @@
       </div>
     </div>  
     <!-- end of sidebar -->
+    <!-- navigation -->
+    <nav class='navigation'>
+      <div class='navigation-header'>
+        <h2 class='navigation-heading'>Hotel</h2>
+        <form class='navigation-search'>
+          <input type="text" class='navigation-search-input' placeholder="Search...">
+          <button class="navigation-search-btn"><i class="fas fa-search"></i></button>
+        </form>
 
+      </div>
+      <ul class="navigation-list">
+        <li class="navigation-item">
+          <a href="#" class="navigation-link">Home</a>
+        </li>
+        <li class="navigation-item">
+          <a href="#" class="navigation-link">About us</a>
+        </li>
+        <li class="navigation-item">
+          <a href="#" class="navigation-link">rooms</a>
+        </li>
+        <li class="navigation-item">
+          <a href="#" class="navigation-link">events</a>
+        </li>
+        <li class="navigation-item">
+          <a href="#" class="navigation-link">customer</a>
+        </li>
+        <li class="navigation-item">
+          <a href="#" class="navigation-link">contact</a>
+        </li>
+      </ul>
+      <div class="copyright">
+        <p>&copy;2019 Hotel By Mahshid Mianchi</p>
+      </div>
+    </nav>
+    <!-- end of navigantion  -->
 
   </div>
  
 
-<!-- <p class="lead mb-0">
-  Copyright&copy;
-  <script>
-    document.write(new Date().getFullYear())
-  </script> Mahshid Mianchi
-</p> -->
+
 </body>
 
 </html>
