--- a/index.html
+++ b/index.html
@@ -18,12 +18,15 @@
   <!-- navbar -->
   <div class='navbar'>
     <!-- sidebar -->
+    <input type="checkbox" class="checkbox" id="click">
     <div class="sidebar">
-      <div class="menu-icon">
-        <div class="line line-1"></div>
-        <div class="line line-2"></div>
-        <div class="line line-3"></div>
-      </div>
+      <label for="click">
+        <div class="menu-icon">
+          <div class="line line-1"></div>
+          <div class="line line-2"></div>
+          <div class="line line-3"></div>
+        </div>
+      </label>  
       <ul class="social-icon-list">
         <li><a href="" class="social-link"><i class="fab fa-facebook-f"></i></a></li>
         <li><a href="" class="social-link"><i class="fab fa-twitter"></i></a></li>
@@ -31,9 +34,11 @@
         <li><a href="" class="social-link"><i class="fab fa-instagram"></i></a></li>
       </ul>
       <div class="year">
-        <script>
-          document.write(new Date().getFullYear())
-        </script>
+        <p>
+          <script>
+            document.write(new Date().getFullYear())
+          </script>
+        </p>
       </div>
     </div>  
     <!-- end of sidebar -->
