--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <!-- navbar -->
   <div class='navbar'>
     <!-- sidebar -->
-    <input type="checkbox" class="checkbox" id="click">
+    <input type="checkbox" class="checkbox" id="click" hidden>
     <div class="sidebar">
       <label for="click">
         <div class="menu-icon">
