--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:100,100i,300,300i,400,400i,600,600i,700,700i|Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
-  <link rel="shortcut icon" type="image/png" href="img/hotel.png">
+  <link rel="shortcut icon" type="image/png" href="img/hotel-favicon.png">
 
   <title>Hotel By Mahshid</title>
 </head>
@@ -77,9 +77,26 @@
       </div>
     </nav>
     <!-- end of navigantion  -->
-
   </div>
- 
+ <!-- header -->
+ <header class="header">
+  <div class="brand">
+    <div>
+      <img src="img/hotel.svg" alt="" width='70px'>
+    </div>
+    <h3 class="hotel-heading">Ocean Hotel</h3>
+  </div>  
+  <div class="banner">
+    <h2 class="banner-heading">
+      Welcome to Ocean Hotel
+    </h2>
+    <p class="banner-paragraph">make your life luxurious</p>
+    <button class="banner-btn">
+      Check Out
+    </button>
+  </div>
+ </header>
+ <!-- end of header -->
 
 
 </body>
