about-us markup

--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
         <p>&copy;2019 Hotel By Mahshid Mianchi</p>
       </div>
     </nav>
-    <!-- end of navigantion  -->
   </div>
+  <!-- end of navigantion  -->
  <!-- header -->
  <header class="header">
   <div class="brand">
@@ -97,6 +97,28 @@
   </div>
  </header>
  <!-- end of header -->
+<!-- about us -->
+ <section class="about-us">
+  <div class="about-us-content">
+    <h2 class="about-us-heading">about us</h2>
+    <div class="underline">
+      <div class="small-underline"></div>
+      <div class="big-underline"></div>
+    </div>
+    <h3 class="sub-heading">Ocean Hotel</h3>
+    <p class="about-us-paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla quo deleniti dolore, sapiente vitae incidunt perspiciatis vero rem earum velit!dolor sit amet consectetur adipisicing elit. Nulla quo deleniti dolore, sapiente vitae incidunt perspiciatis vero rem
+    earum velit!</p>
+    <button class="about-us-btn">read more<i class="fas fa-angle-double-right"></i></button>
+  </div>
+  <div class="about-us-images">
+    <img src="img/about-us-1.jpg" alt="" class="image image-1">
+    <img src="img/about-us-2.jpg" alt="" class="image image-2">
+    <img src="img/about-us-3.jpg" alt="" class="image image-3">
+    <img src="img/about-us-4.jpg" alt="" class="image image-4">
+  </div>
+ </section>
+<!-- end of about us -->
+
 
 
 </body>
