about-us css, left div,wip

--- a/index.html
+++ b/index.html
@@ -111,10 +111,10 @@
     <button class="about-us-btn">read more<i class="fas fa-angle-double-right"></i></button>
   </div>
   <div class="about-us-images">
-    <img src="img/about-us-1.jpg" alt="" class="image image-1">
-    <img src="img/about-us-2.jpg" alt="" class="image image-2">
-    <img src="img/about-us-3.jpg" alt="" class="image image-3">
-    <img src="img/about-us-4.jpg" alt="" class="image image-4">
+    <!-- <img src="img/about-us-1.jpg" alt="hotel image" class="image image-1">
+    <img src="img/about-us-2.jpg" alt="hotel image" class="image image-2">
+    <img src="img/about-us-3.jpg" alt="hotel image" class="image image-3">
+    <img src="img/about-us-4.jpg" alt="hotel image" class="image image-4"> -->
   </div>
  </section>
 <!-- end of about us -->
