about-us css, left div,wip

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     <h3 class="sub-heading">Ocean Hotel</h3>
     <p class="about-us-paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla quo deleniti dolore, sapiente vitae incidunt perspiciatis vero rem earum velit!dolor sit amet consectetur adipisicing elit. Nulla quo deleniti dolore, sapiente vitae incidunt perspiciatis vero rem
     earum velit!</p>
-    <button class="about-us-btn">read more<i class="fas fa-angle-double-right"></i></button>
+    <button class="about-us-btn">read more<i class="fas fa-angle-double-right btn-arrow"></i></button>
   </div>
   <div class="about-us-images">
     <!-- <img src="img/about-us-1.jpg" alt="hotel image" class="image image-1">
