--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 <!-- end of about us -->
 <!-- rooms -->
  <section class="rooms">
-   <div class="commom-header">
+   <div class="common-header">
       <h2 class="common-heading">
         Rooms In Ocean Hotel
       </h2>
@@ -132,45 +132,39 @@
     <div class="rooms-cards-wrapper">
       <div class="room-card">
         <img src="img/single-room.jpeg" class="room-image" alt="">
-      </div>
-      <div class="room-card-content">
-        <h4 class="room-card-heading">single Room</h4>
-        <p class="room-card-paraghraphg">Lorem ipsum dolor sit amet.</p>
-        <p class="room-card-price">$99.00</p>
-        <button class="room-card-btn">Book Now<i class="fas fa-angle-double-right"></i></button>
-      </div>
-    </div>
-    <div class="rooms-cards-wrapper">
+        <div class="room-card-content">
+          <h4 class="room-card-heading">single Room</h4>
+          <p class="room-card-paraghraphg">Lorem ipsum dolor sit amet.</p>
+          <p class="room-card-price">$99.00</p>
+          <button class="room-card-btn">Book Now<i class="fas fa-angle-double-right"></i></button>
+        </div>
+      </div>  
       <div class="room-card">
         <img src="img/double-room.jpeg" class="room-image" alt="">
-      </div>
-      <div class="room-card-content">
-        <h4 class="room-card-heading">Double Room</h4>
-        <p class="room-card-paraghraphg">Lorem ipsum dolor sit amet.</p>
-        <p class="room-card-price">$199.00</p>
-        <button class="room-card-btn">Book Now<i class="fas fa-angle-double-right"></i></button>
-      </div>
-    </div>
-    <div class="rooms-cards-wrapper">
+        <div class="room-card-content">
+          <h4 class="room-card-heading">Double Room</h4>
+          <p class="room-card-paraghraphg">Lorem ipsum dolor sit amet.</p>
+          <p class="room-card-price">$199.00</p>
+          <button class="room-card-btn">Book Now<i class="fas fa-angle-double-right"></i></button>
+        </div>
+      </div>  
       <div class="room-card">
         <img src="img/lux.jpeg" class="room-image" alt="">
+        <div class="room-card-content">
+          <h4 class="room-card-heading">Lux</h4>
+          <p class="room-card-paraghraphg">Lorem ipsum dolor sit amet.</p>
+          <p class="room-card-price">$299.00</p>
+          <button class="room-card-btn">Book Now<i class="fas fa-angle-double-right"></i></button>
+        </div>
       </div>
-      <div class="room-card-content">
-        <h4 class="room-card-heading">Lux</h4>
-        <p class="room-card-paraghraphg">Lorem ipsum dolor sit amet.</p>
-        <p class="room-card-price">$299.00</p>
-        <button class="room-card-btn">Book Now<i class="fas fa-angle-double-right"></i></button>
-      </div>
-    </div>
-    <div class="rooms-cards-wrapper">
       <div class="room-card">
         <img src="img/vip.jpeg" class="room-image" alt="">
-      </div>
-      <div class="room-card-content">
-        <h4 class="room-card-heading">VIP</h4>
-        <p class="room-card-paraghraphg">Lorem ipsum dolor sit amet.</p>
-        <p class="room-card-price">$399.00</p>
-        <button class="room-card-btn">Book Now<i class="fas fa-angle-double-right"></i></button>
+        <div class="room-card-content">
+          <h4 class="room-card-heading">VIP</h4>
+          <p class="room-card-paraghraphg">Lorem ipsum dolor sit amet.</p>
+          <p class="room-card-price">$399.00</p>
+          <button class="room-card-btn">Book Now<i class="fas fa-angle-double-right btn-arrow"></i></button>
+        </div>
       </div>
     </div>
     <div class="rooms-btn-wrapper">
