added customer markup

--- a/index.html
+++ b/index.html
@@ -171,8 +171,47 @@
       <button class="rooms-btn">Check all rooms</button>
     </div>
  </section>
-
 <!-- end of rooms -->
+<!-- customer -->
+  <section class="customers">
+    <div class="common-header">
+      <h2 class="common-heading">Our Customers</h2>
+      <div class="underline">
+        <div class="small-underline"></div>
+        <div class="big-underline"></div>
+      </div>
+    </div>
+    <p clas="customer-paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi laudantium incidunt commodi doloribus minima dicta in beatae quia rem, inventore assumenda reprehenderit ea et blanditiis quibusdam voluptate dolorum fuga quisquam!</p>  
+    <div class="card-wrapper">
+      <div class="customer-card">
+        <div class="customer-imag-wrapper">
+          <img src="img/customer-1.jpeg" alt="" class="customer-image">
+        </div>
+        <div class="customer-info">
+          <h4 class="customer-fullname">Helen Doe</h4>
+          <p class="customer-paragraph-1">Happy Customer</p>
+          <p class="customer-paragraph-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime quas nobis, natus temporibus facilis incidunt quidem
+            eaque! Suscipit explicabo obcaecati deleniti minus voluptates excepturi quaerat?</p>
+        </div>
+      </div>
+      <div class="customer-card">
+        <div class="customer-imag-wrapper">
+          <img src="img/customer-2.jpeg" alt="" class="customer-image">
+        </div>
+        <div class="customer-info">
+          <h4 class="customer-fullname">Monica Smith</h4>
+          <p class="customer-paragraph-1">Happy Customer</p>
+          <p class="customer-paragraph-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime quas nobis, natus
+            temporibus facilis incidunt quidem
+            eaque! Suscipit explicabo obcaecati deleniti minus voluptates excepturi quaerat?</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+<!-- end of customer -->
+
 
 </body>
 
