added customer css,wip

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
         <div class="big-underline"></div>
       </div>
     </div>
-    <p clas="customer-paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi laudantium incidunt commodi doloribus minima dicta in beatae quia rem, inventore assumenda reprehenderit ea et blanditiis quibusdam voluptate dolorum fuga quisquam!</p>  
+    <p class="customer-paragraph">Lorem ipsum dolor.eatae quia rem, inventore assumenda reprehenderit ea et blanditiis quibusdam voluptate dolorum fuga quisquam!</p>  
     <div class="card-wrapper">
       <div class="customer-card">
         <div class="customer-imag-wrapper">
