added customer css

--- a/index.html
+++ b/index.html
@@ -182,9 +182,9 @@
       </div>
     </div>
     <p class="customer-paragraph">Lorem ipsum dolor.eatae quia rem, inventore assumenda reprehenderit ea et blanditiis quibusdam voluptate dolorum fuga quisquam!</p>  
-    <div class="card-wrapper">
+    <div class="customers-card-wrapper">
       <div class="customer-card">
-        <div class="customer-imag-wrapper">
+        <div class="customer-image-wrapper">
           <img src="img/customer-1.jpeg" alt="" class="customer-image">
         </div>
         <div class="customer-info">
@@ -195,15 +195,15 @@
         </div>
       </div>
       <div class="customer-card">
-        <div class="customer-imag-wrapper">
+        <div class="customer-image-wrapper">
           <img src="img/customer-2.jpeg" alt="" class="customer-image">
         </div>
         <div class="customer-info">
           <h4 class="customer-fullname">Monica Smith</h4>
           <p class="customer-paragraph-1">Happy Customer</p>
-          <p class="customer-paragraph-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime quas nobis, natus
+          <p class="customer-paragraph-2">"Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime quas nobis, natus
             temporibus facilis incidunt quidem
-            eaque! Suscipit explicabo obcaecati deleniti minus voluptates excepturi quaerat?</p>
+            eaque! Suscipit explicabo obcaecati deleniti minus voluptates excepturi quaerat?"</p>
         </div>
       </div>
     </div>
