footer,mark up,wip

--- a/index.html
+++ b/index.html
@@ -208,9 +208,74 @@
       </div>
     </div>
   </section>
-
-
 <!-- end of customer -->
+<!-- footer -->
+<footer class="footer">
+  <div class="main-part">
+    <div class="footer-list-wrapper">
+      <h3 class="footer-heading">Ocean Hotel</h3>
+      <ul class="footer-list">
+        <li class="footer-list-item">
+          <a href="" class="footer-list-link">support@oceanhotel</a>
+        </li>
+        <li class="footer-list-item">
+          <a href="" class="footer-list-link">Newyork, Main St 22</a>
+        </li>
+        <li class="footer-list-item">
+          <a href="" class="footer-list-link">Tel: +123 234 1234</a>
+        </li>
+      </ul>
+    </div>
+    <div class="footer-list-wrapper">
+      <h3 class="footer-heading">Explore</h3>
+      <ul class="footer-list">
+        <li class="footer-list-item">
+          <a href="#" class="footer-list-link">Home</a>
+        </li>
+        <li class="footer-list-item">
+          <a href="#" class="footer-list-link">About us</a>
+        </li>
+        <li class="footer-list-item">
+          <a href="#" class="footer-list-link">rooms</a>
+        </li>
+        <li class="footer-list-item">
+          <a href="#" class="footer-list-link">events</a>
+        </li>
+        <li class="footer-list-item">
+          <a href="#" class="footer-list-link">customer</a>
+        </li>
+        <li class="footer-list-item">
+          <a href="#" class="footer-list-link">contact</a>
+        </li>
+      </ul>
+    </div>
+    <div class="contact">
+      <h2>Contact</h2>
+      <ul>
+        <li>Sign up for News</li>
+      </ul>
+      <form action="">
+        <input type="text">
+        <label for=""></label>
+      </form>
+    </div>
+    <div class="gallery">
+      <h2>Gallery</h2>
+      <div class="img-wrapper">
+        <img src="img/gallery-img-1.jpeg" alt="">
+        <img src="img/gallery-img-2.jpeg" alt="">
+
+      </div>
+    </div>
+  </div>
+  <div>
+    <p>&copy;2019 Hotel By Mahshid Mianchi</p>
+  </div>
+
+
+</footer>
+<!-- end of footer-->
+
 
 
 </body>
