--- a/index.html
+++ b/index.html
@@ -249,27 +249,45 @@
         </li>
       </ul>
     </div>
-    <div class="contact">
-      <h2>Contact</h2>
-      <ul>
-        <li>Sign up for News</li>
-      </ul>
-      <form action="">
-        <input type="text">
-        <label for=""></label>
+    <div class="Contact">
+      <h3 class="footer-heading">Contact</h3>
+      <p>Sign up for News</p>
+      <form class="footer-form">
+        <input type="text" class="footer-input" placeholder="Your email...">
+        <button class="footer-btn">Sign up</butto>
       </form>
     </div>
     <div class="gallery">
-      <h2>Gallery</h2>
-      <div class="img-wrapper">
-        <img src="img/gallery-img-1.jpeg" alt="">
-        <img src="img/gallery-img-2.jpeg" alt="">
-
+      <h3 class="footer-heading">Gallery</h3>
+      <div class="gallery-images">
+        <div class="image-wrapper">
+          <img src="img/gallery-img-1.jpeg" alt="" class="footer-image">
+        </div>
+        <div class="image-wrapper">
+          <img src="img/gallery-img-2.jpeg" alt="" class="footer-image">
+        </div>
+        <div class="image-wrapper">
+          <img src="img/gallery-img-3.jpeg" alt="" class="footer-image">
+        </div>
+        <div class="image-wrapper">
+          <img src="img/gallery-img-4.jpeg" alt="" class="footer-image">
+        </div>
+        <div class="image-wrapper">
+          <img src="img/gallery-img-5.jpeg" alt="" class="footer-image">
+        </div>
+        <div class="image-wrapper">
+          <img src="img/gallery-img-6.jpeg" alt="" class="footer-image">
+        </div>
       </div>
     </div>
   </div>
-  <div>
-    <p>&copy;2019 Hotel By Mahshid Mianchi</p>
+  <div class="creator-part">
+    <div class="copyright-text">
+      <p>Copyright &copy;2019 Ocean Hotel By Mahshid Mianchi</p>
+    </div>
+    <div class="copyright-text">
+      <p>Made with<i class="fas fa-heart"></i>by<span>Mahshid Mianchi</span></p>
+    </div>
   </div>
 
 
